add frequencies over time
start with bass frequencies and build up

--- a/.gitignore
+++ b/.gitignore
@@ -228,3 +228,4 @@ as_net/obj/x86/Debug/as_net.csproj.FileListAbsolute.txt
 as_solution/obj/x86/Debug/as_solution.csproj.FileListAbsolute.txt
 as_compare/obj/x86/Debug/as_compare.csproj.FileListAbsolute.txt
 test_mysql/obj/x86/Debug/test_mysql.pdb
+as_clear/obj/x86/Debug/as_clear.csproj.FileListAbsolute.txt
